# FactionBot

./: .gitignore  Cargo.toml  Dockerfile  arsenal.json  automod.json  deletetracker.json  docker-compose.yml  ignore.json  stock.json  user_id.json
src/: main.rs
